--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>this is where i host my matrix homeserver and eventually other things.</p>
         <h2>some "projects"</h2>
         <ul>
-            <a href="https://github.com/clearine/cls">cls</a>
+            <a href="https://github.com/clearine/clearskies">clearskies, a weather program.</a>
         </ul>
     </body>
 </html>
